# syllabi

./: .env.example  .gitignore  .pre-commit-config.yaml  PLAN.md  TODO.md  alembic.ini  pyproject.toml  restart-mothership.ps1
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/prompts/: agent-handoff-phase2.prompt.md  plan-aiDrivenCoursePlatform.prompt.md  skill-generate-course.prompt.md  skill-grading-endpoint.prompt.md  skill-new-feature.prompt.md  skill-subjective-rubric.prompt.md
.github/workflows/: ai-reviewer.yml  ci.yml
.playwright-cli/: page-2026-03-02T06-50-39-410Z.yml  page-2026-03-02T06-51-01-987Z.yml
.stubs/: phase3-auth.md  phase3-enrollment.md  phase3-frontend-auth.md  phase3-grading.md
backend/: config.py  database.py  dependencies.py  exceptions.py  main.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0cdbd53739f9_initial_schema.py  a1b2c3d4e5f6_add_enrollments_table.py
backend/models/: __init__.py  assignment.py  base.py  course.py  enrollment.py  submission.py  user.py
backend/routers/: assignments.py  auth.py  courses.py  health.py  submissions.py  users.py
backend/schemas/: assignment.py  course.py  enrollment.py  submission.py  user.py
backend/services/: course_service.py  enrollment_service.py  submission_service.py  user_service.py
backend/tests/: conftest.py  test_health.py
backend/tests/models/: test_user.py
backend/tests/routers/: test_auth.py  test_courses.py  test_enrollments.py  test_submissions.py  test_users.py
backend/tests/services/: test_enrollment_service.py  test_user_service.py
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/layout/: AppShell.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  label.tsx  tabs.tsx
frontend/src/pages/: DashboardPage.tsx
