[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

# ---------------------------------------------------------------------------
# Ruff — aggressive linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Enable a very broad ruleset. AI is good at fixing pedantic warnings.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
    "DTZ", # flake8-datetimez (always use timezone-aware datetimes)
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "PIE", # flake8-pie
    "T20", # flake8-print (no bare print statements in production code)
    "ERA", # eradicate (no commented-out code)
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",   # allow assert in tests
    "PLR2004", # allow magic numbers in tests
    "T201",   # allow print in scripts
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S", "ANN", "PLR2004", "T20", "PLC0415"]
"**/routers/**" = ["B008"]
"backend/dependencies.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

# ---------------------------------------------------------------------------
# mypy — strict static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_error_codes = true
show_column_numbers = true

# Ignore missing stubs for third-party libraries that ship without them
[[tool.mypy.overrides]]
module = ["uvicorn.*", "fastapi.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = [
    "--tb=short",
    "-q",
    "--strict-markers",
]
markers = [
    "integration: marks tests that require a live database (deselect with -m 'not integration')",
    "slow: marks tests that are slow",
]

# ---------------------------------------------------------------------------
# pre-commit — all linters run as git hooks
# ---------------------------------------------------------------------------
[tool.pre-commit]
# Hook definitions live in .pre-commit-config.yaml.
# Install with: pre-commit install
